Fix double borders with outlined style

--- a/srcjs/assets/reactable.css
+++ b/srcjs/assets/reactable.css
@@ -69,7 +69,8 @@
   border-bottom: 2px solid rgba(0, 0, 0, 0.1);
 }
 
-.ReactTable.-striped .rt-thead.-header {
+.ReactTable.-striped .rt-thead.-header,
+.ReactTable.-outlined .rt-thead.-header {
   border-bottom-width: 1px;
 }
 
@@ -96,7 +97,7 @@
   border-bottom: none;
 }
 
-.ReactTable.-bordered .rt-tbody .rt-tr-group {
+.ReactTable.-bordered .rt-tbody .rt-tr-group:not(:last-child) {
   border-bottom: solid 1px rgba(0, 0, 0, 0.05);
 }
 
